public interface Notificador {
    void enviar(String mensaje);
}